fix overflow on login and signup views

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,7 +4,6 @@
 .form {
   margin: 0 auto;
   text-align: center;
-  height: 100vh;
 
   // h2 {
   //   background: rgba(1,1,1,0.75);
